crud+security(not running)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.open-in-view=false
+
+# JWT configuration (externalize secret and expiration instead of hardcoding them in your code)
+jwt.secret=votre_cle_secrete
+jwt.expiration=36000000  # Token validity: 10 hours in milliseconds
+# Optional: Enable debug logging for Spring Security
+logging.level.org.springframework.security=DEBUG
+spring.main.lazy-initialization=true
